prevent zoom on mobile when selecting input field

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;0,900;1,100;1,400;1,700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&family=Roboto+Slab:wght@100;400;700&family=Roboto:ital,wght@0,100;0,400;0,700;0,900;1,100;1,400;1,700&display=swap');
 
 :root {
@@ -38,7 +37,6 @@ html,
 body {
     padding: 0;
     margin: 0;
-    /* font-family: 'Roboto', sans-serif; */
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -133,4 +131,12 @@ h4 {
         --on-background-color: #ffffff;
         --on-surface-color: #ffffff;
     } */
+}
+
+@media screen and (max-width: 768px) {
+    input,
+    select,
+    textarea {
+        font-size: 16px;
+    }
 }
